Fixed some bugs relating to single click and double clicks in the hierarchy and simple list panels. Search result bug not showing first result is now fixed. True/false in the simple lists has been fixed to yes/no. Path panel icons have been altered to the open versions

--- a/src/main/webapp/resources/css/lph.css
+++ b/src/main/webapp/resources/css/lph.css
@@ -88,7 +88,7 @@
 
 .list-title {
     position: relative;
-    left: 33px;
+    margin-left: 33px;
     font-weight: bold;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -96,7 +96,7 @@
 
 .list-footer {
     position: relative;
-    left: 30px;
+    margin-left: 30px;
     font-size: .85em;
     overflow: hidden;
     text-overflow: ellipsis;
